[gd_scene load_steps=24 format=3 uid="uid://c0ur5vf2sgf2s"]

[ext_resource type="Script" path="res://scenes/playground/Rect.gd" id="1_xqf1l"]
[ext_resource type="Texture2D" uid="uid://gk7udv2vih6r" path="res://assets/white.png" id="2_72flb"]
[ext_resource type="Texture2D" uid="uid://qsebfi3447th" path="res://assets/blue.png" id="2_gir0y"]
[ext_resource type="Texture2D" uid="uid://dmlv7l6lwogmw" path="res://assets/maske.png" id="4_u4mid"]
[ext_resource type="Texture2D" uid="uid://ooj8ue67bf7j" path="res://assets/gui/rect_buttons.png" id="5_hmmwh"]

[sub_resource type="AtlasTexture" id="AtlasTexture_iy0ws"]
atlas = ExtResource("5_hmmwh")
region = Rect2(0, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_bcgre"]
atlas = ExtResource("5_hmmwh")
region = Rect2(32, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_likl4"]
atlas = ExtResource("5_hmmwh")
region = Rect2(16, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_d46o3"]
atlas = ExtResource("5_hmmwh")
region = Rect2(48, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_tqdoo"]
atlas = ExtResource("5_hmmwh")
region = Rect2(80, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_va76x"]
atlas = ExtResource("5_hmmwh")
region = Rect2(64, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_mivkl"]
atlas = ExtResource("5_hmmwh")
region = Rect2(80, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_lq3gv"]
atlas = ExtResource("5_hmmwh")
region = Rect2(0, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_vtsv6"]
atlas = ExtResource("5_hmmwh")
region = Rect2(32, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_1ctkp"]
atlas = ExtResource("5_hmmwh")
region = Rect2(16, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_sasoj"]
atlas = ExtResource("5_hmmwh")
region = Rect2(32, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_nvlux"]
atlas = ExtResource("5_hmmwh")
region = Rect2(48, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_i5lpp"]
atlas = ExtResource("5_hmmwh")
region = Rect2(80, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_hdo8s"]
atlas = ExtResource("5_hmmwh")
region = Rect2(64, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_bycuk"]
atlas = ExtResource("5_hmmwh")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xesyf"]
atlas = ExtResource("5_hmmwh")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3bimh"]
atlas = ExtResource("5_hmmwh")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7hu2w"]
atlas = ExtResource("5_hmmwh")
region = Rect2(64, 0, 32, 32)

[node name="Container" type="MarginContainer"]
offset_right = 48.0
offset_bottom = 80.0
mouse_filter = 2
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = 0
script = ExtResource("1_xqf1l")
metadata/_edit_group_ = true

[node name="Content" type="MarginContainer" parent="."]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = 0

[node name="OutlineContainer" type="MarginContainer" parent="Content"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 6
theme_override_constants/margin_top = 6
theme_override_constants/margin_right = 6
theme_override_constants/margin_bottom = 6

[node name="Outline" type="TextureRect" parent="Content/OutlineContainer"]
layout_mode = 2
texture = ExtResource("2_gir0y")

[node name="TextureContainer" type="MarginContainer" parent="Content"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="Rect" type="TextureRect" parent="Content/TextureContainer"]
self_modulate = Color(0, 0, 0, 1)
custom_minimum_size = Vector2(7, 7)
layout_mode = 2
texture = ExtResource("2_72flb")

[node name="Maske" type="TextureRect" parent="Content/TextureContainer"]
layout_mode = 2
texture = ExtResource("4_u4mid")

[node name="MoveButton" type="Button" parent="Content/TextureContainer"]
layout_mode = 2
tooltip_text = "move by dragging and dropping"

[node name="WidthButtonRight" type="TextureButton" parent="Content"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4
tooltip_text = "shrink or expand"
texture_normal = SubResource("AtlasTexture_iy0ws")
texture_pressed = SubResource("AtlasTexture_bcgre")
texture_hover = SubResource("AtlasTexture_likl4")
texture_disabled = SubResource("AtlasTexture_bcgre")
texture_focused = SubResource("AtlasTexture_bcgre")

[node name="WidthButtonLeft" type="TextureButton" parent="Content"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
tooltip_text = "shrink or expand"
texture_normal = SubResource("AtlasTexture_iy0ws")
texture_pressed = SubResource("AtlasTexture_bcgre")
texture_hover = SubResource("AtlasTexture_likl4")
texture_disabled = SubResource("AtlasTexture_bcgre")
texture_focused = SubResource("AtlasTexture_bcgre")
flip_h = true

[node name="HeightButtonDown" type="TextureButton" parent="Content"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
tooltip_text = "shrink or expand"
texture_normal = SubResource("AtlasTexture_d46o3")
texture_pressed = SubResource("AtlasTexture_tqdoo")
texture_hover = SubResource("AtlasTexture_va76x")
texture_disabled = SubResource("AtlasTexture_mivkl")

[node name="DiagButtonRD" type="TextureButton" parent="Content"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
tooltip_text = "shrink or expand"
texture_normal = SubResource("AtlasTexture_lq3gv")
texture_pressed = SubResource("AtlasTexture_vtsv6")
texture_hover = SubResource("AtlasTexture_1ctkp")
texture_disabled = SubResource("AtlasTexture_sasoj")

[node name="DiagButtonLD" type="TextureButton" parent="Content"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8
tooltip_text = "shrink or expand"
texture_normal = SubResource("AtlasTexture_lq3gv")
texture_pressed = SubResource("AtlasTexture_vtsv6")
texture_hover = SubResource("AtlasTexture_1ctkp")
texture_disabled = SubResource("AtlasTexture_sasoj")
flip_h = true

[node name="DiagButtonRU" type="TextureButton" parent="Content"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
tooltip_text = "shrink or expand"
texture_normal = SubResource("AtlasTexture_lq3gv")
texture_pressed = SubResource("AtlasTexture_vtsv6")
texture_hover = SubResource("AtlasTexture_1ctkp")
texture_disabled = SubResource("AtlasTexture_sasoj")
flip_v = true

[node name="DiagButtonLU" type="TextureButton" parent="Content"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
tooltip_text = "shrink or expand"
texture_normal = SubResource("AtlasTexture_lq3gv")
texture_pressed = SubResource("AtlasTexture_vtsv6")
texture_hover = SubResource("AtlasTexture_1ctkp")
texture_disabled = SubResource("AtlasTexture_sasoj")
flip_h = true
flip_v = true

[node name="MirrorButton" type="TextureButton" parent="Content"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
texture_normal = SubResource("AtlasTexture_nvlux")
texture_pressed = SubResource("AtlasTexture_i5lpp")
texture_hover = SubResource("AtlasTexture_hdo8s")

[node name="TurnButton" type="TextureButton" parent="."]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
tooltip_text = "rotate"
texture_normal = SubResource("AtlasTexture_bycuk")
texture_pressed = SubResource("AtlasTexture_xesyf")
texture_hover = SubResource("AtlasTexture_3bimh")
texture_disabled = SubResource("AtlasTexture_7hu2w")

[connection signal="button_down" from="Content/TextureContainer/MoveButton" to="." method="_on_move_button_pressed"]
[connection signal="button_down" from="Content/WidthButtonRight" to="." method="_on_width_button_right_pressed"]
[connection signal="button_down" from="Content/WidthButtonLeft" to="." method="_on_width_button_left_pressed"]
[connection signal="button_down" from="Content/HeightButtonDown" to="." method="_on_height_button_down_pressed"]
[connection signal="button_down" from="Content/DiagButtonRD" to="." method="_on_diag_button_rd_pressed"]
[connection signal="button_down" from="Content/DiagButtonLD" to="." method="_on_diag_button_ld_pressed"]
[connection signal="button_down" from="Content/DiagButtonRU" to="." method="_on_diag_button_ru_pressed"]
[connection signal="button_down" from="Content/DiagButtonLU" to="." method="_on_diag_button_lu_pressed"]
[connection signal="pressed" from="Content/MirrorButton" to="." method="_on_mirror_button_pressed"]
[connection signal="button_down" from="TurnButton" to="." method="_on_turn_button_pressed"]
